# Blockchain

./: CMakeLists.txt  Dockerfile.verify  README.md  blockchain_node.sha256  config.json  grafana_dashboard.json  history.db  main  main.cpp  release_manifest.json
.github/workflows/: build.yml
consensus/raft/: raftMessage.hpp  raftNode.hpp
core/: block.hpp  mempool.hpp  serialization.hpp  stateMachine.hpp  transaction.hpp  validation.hpp
crypto/: ed25519Signature.hpp  hash.cpp  hash.hpp  keypair.hpp  sha256Hash.cpp  sha256Hash.hpp  types.hpp
data/: peers.json
docs/: cryptography.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
include/alerts/: alertManager.hpp  alertRule.hpp  event.hpp  eventCollector.hpp
include/analytics/: forecastDashboard.hpp  forecaster.hpp  rtoRpoAnalyzer.hpp  trendAnalyzer.hpp  trendReporter.hpp
include/chaos/: chaosEngine.hpp  chaosFault.hpp  chaosRunner.hpp  chaosScenario.hpp  resourceMonitor.hpp  scenarioRunner.hpp  stressProfile.hpp
include/ci/: chaosCiRunner.hpp  notificationManager.hpp  verificationAgent.hpp
include/cluster/: cluserManager.hpp  clusterController.hpp  clusterManager.hpp  clusterNode.hpp
include/config/: Config.hpp
include/consensus/: consensusInterface.hpp  consensusManager.hpp  finalityManager.hpp  raftIntegration.hpp
include/core/: block.hpp  blockBuilder.hpp  blockEncoding.hpp  blockJson.hpp  blockchain.hpp  commitPipeline.hpp  consensus.hpp  crypto.hpp  dmKeyManager.hpp  logger.hpp  mempool.hpp  poaValidator.hpp  serialization.hpp  stateMachine.hpp  transaction.hpp  validation.hpp
include/crypto/: hash.hpp  keypair.hpp  sha256Hash.hpp  signature.hpp  types.hpp
include/dashboard/: perfDashboard.hpp
include/dnd/: character.hpp  dndActions.hpp  dndApi.hpp  dndCharacterService.hpp  dndPayload.hpp  dndState.hpp  dndTx.hpp  dndTxAdapter.hpp  dndTxCodec.hpp  dndTxSerialization.hpp  dndTxValidator.hpp  eventLog.hpp  explorerBackend.hpp  isDndPayload.hpp  patch.hpp  payload.hpp  privacyFilter.hpp  rollCommitReveal.hpp  state.hpp  stateSnapshot.hpp
include/incident/: forensicsReporter.hpp  incident.hpp  incidentHandler.hpp
include/light/: headerChain.hpp  lightClient.hpp  merkleProof.hpp
include/metrics/: clusterMetrics.hpp  dndMetrics.hpp  metricsCollector.hpp  metricsServer.hpp
include/network/: discovery.hpp  fastSyncManager.hpp  gossipProtocol.hpp  gossipServer.hpp  messages.hpp  peer.hpp  peerDiscovery.hpp  peerInfo.hpp  peerManager.hpp  syncManager.hpp  syncProtocol.hpp
include/node/: lifecycleManager.hpp  nodeInstance.hpp  recoveryController.hpp
include/obervability/: logger.hpp  metrics.hpp  tracing.hpp
include/obs/: healthChecker.hpp  metrics.hpp  metricsServer.hpp  tracer.hpp
include/ops/: exportAgent.hpp  grafanaDashboardGenerator.hpp  notification.hpp  reliabilityGuard.hpp
include/pipeline/: securityPipeline.hpp
include/profiling/: cpuProfiler.hpp  memoryProfiler.hpp
include/recovery/: corruptionDetector.hpp  disasterRecovery.hpp  fastSync.hpp  integrityChecker.hpp  recoveryManager.hpp  recoveryStep.hpp  rejoinController.hpp  timelineReporter.hpp
include/release/: attestation.hpp  checksummer.hpp  releaseManifest.hpp  releasePublisher.hpp  releaseVerifier.hpp  sbom.hpp  signer.hpp  verifier.hpp
include/runtime/: nodeHealthMonitor.hpp  runtimeLoop.hpp  upgradeManager.hpp
include/security/: aclManager.hpp  auditReport.hpp  cryptoEngine.hpp  keyManager.hpp  policyEnforcer.hpp  redactionEngine.hpp  securityScanner.hpp
include/storage/: blockStore.hpp  commitLog.hpp  historyStore.hpp  kvstore.hpp  snapshot.hpp  snapshotManager.hpp  wal.hpp
include/tests/: regressionReporter.hpp  regressionRunner.hpp  testFramework.hpp
include/upgrade/: experimentReport.hpp  goldenFileManager.hpp  rollingUpgradeController.hpp  schemaRegistry.hpp  stateValidator.hpp  upgradeMatrix.hpp  upgradeSafetyChecker.hpp  versionManager.hpp
include/util/: dndApi.hpp  dummyCrypto.hpp  hex.hpp
include/utils/: log.hpp
include/web/: chainApi.hpp  dashboardServer.hpp  dmApi.hpp  dndApi.hpp  metricsEndpoint.hpp
network/: connectionManager.hpp  gossip.hpp  message.hpp  tansport.hpp
release/: ed25519.key  ed25519.pub
reports/: run1.json  run2.json  run3.json  run4.json  run5.json
scripts/: load_test_api.sh  verifyManifest.py  verify_manifest.py
src/: main  main.cpp
src/alerts/: alterManager.hpp  eventCollector.cpp
src/analytics/: forecaster.cpp  rtoRpoAnalyzer.cpp  trendAnalyzer.cpp  trendReporter.cpp
src/ci/: chaosCiRunner.cpp  notificationManager.hpp  verificationAgent.cpp
src/cluster/: clusterManager.cpp  clusterNode.cpp
src/config/: Config.cpp
src/consensus/: consensusManager.cpp  finalityManager.cpp
src/core/: block.cpp  blockBuilder.cpp  blockEncoding.cpp  blockJson.cpp  blockchain.cpp  consensus.cpp  crypto.cpp  dmKeyManager.cpp  logger.cpp  mempool.cpp  poaValidator.cpp  transaction.cpp  validation.cpp
src/crypto/: hash.cpp  sha256Hash.cpp
src/dashboard/: forecastDashboard.cpp  perfDashboard.cpp
src/dnd/: character.cpp  dndActions.cpp  dndCharacterService.cpp  dndState.cpp  dndTx.cpp  dndTxAdapter.cpp  dndTxCodec.cpp  (+5 more)
storage/: blockstore.hpp  snapshot.hpp  wal.hpp
tests/: block_merkle_root.cpp  dnd_apply_tests.cpp  fuzz_encounter_turns_and_initiative.cpp  main.cpp  selftest_chain_dnd.cpp
tools/: blockchain_cli.cpp
ui/: app.js  dm.html  player.html  style.css
www/: dm.html  dmApi.js  dndTxClient.js  index.html  player.html  playerCrypto.js  team.html  teamApi.js
(+104 files in other folders)
